# cyberdog_motor_sdk

./: CMakeLists.txt  README.md  README_EN.md  auto_lcm_init.sh
include/: CustomInterface.h  custom_interface.hpp  spi_data_t.hpp
src/: CustomInterface.cpp  Example_MotorCtrl.cpp  custom_interface.cpp  example_motor_ctrl.cpp
